--- a/Task-2/task2.html
+++ b/Task-2/task2.html
@@ -13,7 +13,7 @@
             <canvas id="inner" width="0" height="0"></canvas>
             <canvas id="outer" width="0" height="0"></canvas>
 		<script type="text/javascript" src="task2.js"></script>
-    <audio id="music" autoplay="autoplay" loop="loop"><source src="images/music.ogg"></audio>
+    <audio id="music" autoplay="autoplay" loop="loop"><source src="music.ogg"></audio>
   </body>
 </html>
 
